--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -35,8 +35,9 @@ jobs:
         with:
           node-version: lts/*
           cache: 'npm'
+          cache-dependency-path: 'package.json'
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build
         run: npm run build
       - name: Setup Pages
