--- a/.github/workflows/vite.yml
+++ b/.github/workflows/vite.yml
@@ -2,9 +2,8 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes to all branches
   push:
-    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
